--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,7 @@
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
-  font-weight: 400;
+  font-weight: 500;
 
   color-scheme: light dark;
   color: #f5f5f5; /* Light text for dark mode */
@@ -87,22 +87,28 @@ body {
 }
 
 .chat-input {
+  font-size: 1em;
   background-color: #9b59b6;
   color: white;
   padding: 10px; /* Keep height consistent */
   border-radius: 10px;
   max-width: 70%;
   align-self: flex-end;
-  text-align: right;
+  text-align: left;
   margin-left: auto;
   width: auto;
   min-width: 10px;
+  margin-top: 5px;
   border: none;
   outline: none;
 
   /* Fix spacing issue */
-  box-sizing: border-box; /* Ensures padding doesn't increase width */
+  /* box-sizing: border-box; /* Ensures padding doesn't increase width */
   padding-right: 12px; /* Adds space inside input */
+}
+
+#send {
+  display: none;
 }
 
 .measure-span {
