--- a/src/style.css
+++ b/src/style.css
@@ -5,7 +5,7 @@
 
   color-scheme: light dark;
   color: #f5f5f5; /* Light text for dark mode */
-  background-color: #4e4e4e; /* Darker background for better contrast */
+  background-color: #343434; /* Darker background for better contrast */
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -158,6 +158,13 @@ body {
   color: #aaa;
 }
 
+.form-check {
+  display: flex;
+  justify-content: flex-end;
+}
+.form-check-label {
+  margin-left: 8px;
+}
 button {
   border-radius: 8px;
   border: 1px solid transparent;
